# the-physical-nightmare

./: .gitignore  CMakeLists.txt  README.md  setup.bat  setupcmake.bat
src/: main.cpp
src/core/: Game.cpp  Game.hpp  World.cpp  World.hpp
src/levels/: ZonePlatform.hpp
src/levels/level1/: Level1_Newton.cpp  Level1_Newton.hpp  Level1_Zone0_Spawn.cpp  Level1_Zone0_Spawn.hpp  Level1_Zone1_Slope.cpp  Level1_Zone1_Slope.hpp  Level1_Zone2_Cave.cpp  Level1_Zone2_Cave.hpp  Level1_Zone3_Fall.cpp  Level1_Zone3_Fall.hpp  Level1_Zone4_Hidden.cpp  Level1_Zone4_Hidden.hpp  Level1_Zone5_Boss.cpp  Level1_Zone5_Boss.hpp  Level1_Zone6_Exit.cpp  Level1_Zone6_Exit.hpp  Level1_ZoneBase.hpp
src/skills/: Skill.hpp  SkillC_Bomb.hpp  SkillV_Ultimate.hpp  SkillX_Shield.hpp  SkillZ_Plasma.hpp
src/systems/: CombatSystem.cpp  CombatSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/utills/: PhysicsSystem.cpp  PhysicsSystem.hpp  Stubs.hpp
